--- a/4/Практическая_работа_№4__Решающие_деревья.ipynb
+++ b/4/Практическая_работа_№4__Решающие_деревья.ipynb
@@ -58,7 +58,7 @@
         "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
         "id": "6Lxx6p2QASG0",
         "outputId": "92bb175b-5641-481a-8efd-3fdcd8897610"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
         "id": "zGmJ1lslAJKq",
         "outputId": "23349482-863a-4f26-aa47-9626f07e2a1f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +538,7 @@
       "metadata": {
         "id": "1n_m8U7yBgVU"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -549,7 +549,7 @@
       "metadata": {
         "id": "bAmOkF5eL3nU"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
       "metadata": {
         "id": "SuJQq2_bNiZh"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +600,7 @@
         "id": "MpDzcRkNnzoZ",
         "outputId": "799dd494-1e53-4ed0-d2e4-968d2cf7ffaf"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
         "id": "XGWuvSrZn2FJ",
         "outputId": "bd36b1f4-8d84-4f5f-dd4e-efa2d744ccc3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,7 +1097,7 @@
         },
         "outputId": "694e3e37-6e13-4ecc-81ad-aade52f95c59"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1554,7 +1554,7 @@
         },
         "outputId": "b6888c50-ec62-403b-c198-988148bd7fd1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,7 +1604,7 @@
       "metadata": {
         "id": "bpOgq5DoYU0d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1624,7 +1624,7 @@
         },
         "outputId": "6f97c055-ce0c-4dc4-a3ff-8fd36ebe2a3e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2083,7 +2083,7 @@
         },
         "outputId": "c584dd41-7bb5-461f-cdaf-74621235c214"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2141,7 +2141,7 @@
         },
         "outputId": "275eb58a-bcd2-4098-be65-1addf2ba4668"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2173,7 +2173,7 @@
         },
         "outputId": "08239028-ef02-4bf3-e607-19666aef8ae6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2243,7 +2243,7 @@
       "metadata": {
         "id": "V2eoINHCYkDJ"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2271,7 +2271,7 @@
         },
         "outputId": "040110a9-9574-456e-997d-6d40684463f4"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2324,7 +2324,7 @@
       "metadata": {
         "id": "vwkAs0PPbQ5F"
       },
-      "execution_count": 23,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -2344,7 +2344,7 @@
         "id": "x_zc3-tboyAA",
         "outputId": "def14703-fd9a-4dcb-e2b8-b879a785c5ae"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2397,32 +2397,6 @@
     {
       "cell_type": "code",
       "source": [
-        "for name, values in df1.items():\n",
-        "  print(sorted(df1[name].unique()))"
-      ],
-      "metadata": {
-        "id": "SbCeHaxUY43n",
-        "outputId": "0cfdf3ba-49a1-4026-b7be-6d739221d193",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[56.0, 62.0, 64.0, 67.0, 68.0, 71.0, 82.0, 85.0, 93.0, 95.0]\n",
-            "[1, 2, 3]\n",
-            "[0, 1]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
@@ -2454,15 +2428,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "53ed6d5c-0575-44bc-8632-c4a8caf2198a"
+        "outputId": "1bcb98da-25aa-4622-f39a-b0ceb45671e8"
       },
-      "execution_count": 26,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-26-f496f261cc21>:23: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "<ipython-input-33-f496f261cc21>:23: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
             "  information_gains = pd.concat([information_gains, result_df], ignore_index=True)\n"
           ]
         },
@@ -2511,9 +2485,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8b83848a-d341-4300-80f1-0bfd71980daa"
+        "outputId": "838c147c-2299-4a3e-dadc-c42fbc74a0e9"
       },
-      "execution_count": 27,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -2548,12 +2522,12 @@
       ],
       "metadata": {
         "id": "6ZGzYZ1aeBCP",
-        "outputId": "468b46fc-d3e6-4e1e-f00d-eb31cf64250e",
+        "outputId": "d27a26cb-d3f4-4008-dbaf-2b032e0c3236",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -2588,7 +2562,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plot_tree(tree, feature_names=selected_features, filled=True)"
+        "plot_tree(tree, feature_names=features, filled=True)"
       ],
       "metadata": {
         "id": "ujWbShf2fNm2",
@@ -2596,9 +2570,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 750
         },
-        "outputId": "9c39b3e7-6a9e-47ae-9c67-bc2498209c14"
+        "outputId": "eb2ba335-2e55-4e76-ba76-4d52cfd402e1"
       },
-      "execution_count": 30,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2620,7 +2594,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 36
         },
         {
           "output_type": "display_data",
@@ -2698,7 +2672,7 @@
         },
         "outputId": "357a508e-d5e7-4a28-b2f6-fc7abe8c2472"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
